# finanz

./: Cargo.toml  fintypes.json
src/: lib.rs  main.rs  tval.rs
src/base/: economics.rs  mod.rs
