[package]
name = "finanz"
version = "0.1.0"
authors = ["n-kishaloy <nkishaloy@yahoo.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

util = { git = "https://github.com/n-kishaloy/util" }
ndarray = { version = "*" }
ndarray-stats = { version = "*" } 
chrono = { version = "*", features = ["serde"] }
reqwest = { version = "*" }
serde_json = { version = "*" } 
